--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
+  "main": "src/electron-main.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron": "NODE_ENV=development electron ."
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-modal": "^3.10.6"
+    "@types/react-modal": "^3.10.6",
+    "electron": "^11.2.1"
   }
 }
