--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^12.19.12",
         "@types/react": "^16.14.2",
         "@types/react-dom": "^16.9.10",
+        "keytar": "^7.3.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-modal": "^3.12.1",
