--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react-dom": "^16.9.10",
         "keytar": "^7.3.0",
         "react": "^17.0.1",
+        "react-contextmenu": "^2.14.0",
         "react-dom": "^17.0.1",
         "react-modal": "^3.12.1",
         "react-scripts": "4.0.1",
