--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "electron": "NODE_ENV=development electron ."
+        "electron": "electron ."
     },
     "eslintConfig": {
         "extends": [
