--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "react-modal": "^3.12.1",
         "react-scripts": "4.0.1",
         "typescript": "^4.1.3",
+        "vh-check": "^2.0.5",
         "web-vitals": "^0.2.4"
     },
     "main": "src/electron-main.js",
