--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "typescript": "^4.1.3",
         "web-vitals": "^0.2.4"
     },
-    "main": "src/electron-main.js",
+    "main": "src/electron/main.js",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
