--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
         "@types/react-dom": "^16.9.11",
         "keytar": "^7.4.0",
         "react": "^17.0.1",
-        "react-contextmenu": "^2.14.0",
+        "react-contextmenu": "burace17/react-contextmenu",
         "react-dom": "^17.0.1",
         "react-modal": "^3.12.1",
-        "react-scripts": "4.0.1",
+        "react-scripts": "^4.0.1",
         "typescript": "^4.2.2",
         "web-vitals": "^0.2.4"
     },
