--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
         "@types/node": "^14.0.0",
         "@types/react": "^17.0.1",
         "@types/react-dom": "^17.0.1",
+        "@types/url-regex-safe": "^1.0.0",
         "keytar": "^7.4.0",
         "react": "^17.0.1",
         "react-contextmenu": "burace17/react-contextmenu",
         "react-dom": "^17.0.1",
         "react-modal": "^3.12.1",
         "react-scripts": "^4.0.1",
+        "string-replace-to-array": "burace17/string-replace-to-array",
         "typescript": "^4.2.2",
+        "url-regex-safe": "^2.0.2",
         "web-vitals": "^1.0.0"
     },
     "main": "src/electron/main.js",
@@ -31,7 +34,11 @@
         "extends": [
             "react-app",
             "react-app/jest"
-        ]
+        ],
+        "rules": {
+            "semi": ["error", "always"],
+            "quotes": ["error", "double"]
+        }
     },
     "browserslist": {
         "production": [
