--- a/package.json
+++ b/package.json
@@ -36,8 +36,14 @@
             "react-app/jest"
         ],
         "rules": {
-            "semi": ["error", "always"],
-            "quotes": ["error", "double"]
+            "semi": [
+                "error",
+                "always"
+            ],
+            "quotes": [
+                "error",
+                "double"
+            ]
         }
     },
     "browserslist": {
