--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/url-regex-safe": "^1.0.0",
         "cypress": "^6.6.0",
         "keytar": "^7.4.0",
+        "mock-socket": "^9.0.3",
         "react": "^17.0.1",
         "react-contextmenu": "burace17/react-contextmenu",
         "react-dom": "^17.0.1",
