--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@cypress/code-coverage": "^3.9.2",
+        "@cypress/instrument-cra": "^1.4.0",
         "@testing-library/jest-dom": "^5.11.9",
         "@testing-library/react": "^11.2.5",
         "@testing-library/user-event": "^12.7.3",
@@ -14,6 +16,7 @@
         "cypress": "^6.6.0",
         "keytar": "^7.4.0",
         "mock-socket": "^9.0.3",
+        "nyc": "^15.1.0",
         "react": "^17.0.1",
         "react-contextmenu": "burace17/react-contextmenu",
         "react-dom": "^17.0.1",
@@ -26,7 +29,7 @@
     },
     "main": "src/electron/main.js",
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts -r @cypress/instrument-cra start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
