--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@types/react-dom": "^17.0.1",
         "@types/url-regex-safe": "^1.0.0",
         "cypress": "^6.6.0",
+        "eslint-plugin-cypress": "^2.11.2",
         "keytar": "^7.4.0",
         "mock-socket": "^9.0.3",
         "nyc": "^15.1.0",
@@ -38,7 +39,8 @@
     "eslintConfig": {
         "extends": [
             "react-app",
-            "react-app/jest"
+            "react-app/jest",
+            "plugin:cypress/recommended"
         ],
         "rules": {
             "semi": [
@@ -48,6 +50,10 @@
             "quotes": [
                 "error",
                 "double"
+            ],
+            "indent": [
+                "error",
+                4
             ]
         }
     },
