--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,12 +2,13 @@
     "compilerOptions": {
         "target": "es5",
         "lib": [
-            "es5",
+            "es2015",
             "dom"
         ],
         "types": [
             "cypress"
-        ]
+        ],
+        "downlevelIteration": true
     },
     "include": [
         "**/*.ts"
