Add a test for image embedding

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -8,7 +8,8 @@
         "types": [
             "cypress"
         ],
-        "downlevelIteration": true
+        "downlevelIteration": true,
+        "esModuleInterop": true
     },
     "include": [
         "**/*.ts"
